--- a/teaching-sta302.qmd
+++ b/teaching-sta302.qmd
@@ -25,7 +25,7 @@ Essentially this course provides students with everything that they need to know
 
 -   Can I audit this course? Sure, but it is pointless, because the only way to learn this stuff is to do the work.
 -   Why is there so much assessment? The only way to learn this stuff is to actually do the work, and students only do the work when they are assessed. It is unfortunate, but there is no way around it.
--   How difficult is the course? Of students that enrol, the median student drops the course. But the mode overall grade at the end of the course is an A+. The course is not difficult, but the hands-on-projects mean it is a lot of work.
+-   How difficult is the course? Of students that enrol, the median student drops the course. But the mode overall grade at the end of the course is an A+. The course is not difficult, but the hands-on-projects mean it is a great opporunity for you to do a lot of work. Past students have said that it set them up for success in grad school applications and job interviews.
 -   What is the format of the class? There are rarely lectures because those are not effective. You should read the relevant chapter and attempt the quiz before class. During class we will focus on examples, activities and discussion. We will also have industry guests discuss their experience.
 -   You are asking about X, but you didn't teach that---what's up with that? A key skill is being able to teach yourself what you need. In general, I will probably have directed you to the materials that you should go over, but you're welcome to ask for more pointers if I've not been clear enough.
 
@@ -41,7 +41,6 @@ The purpose of the course is to develop the core skills to do with methods of da
 6.  Develop the ability to appropriately choose and apply statistical models to real-world situations (demonstrated in the final paper)
 7.  Conduct all aspects of the typical data analysis workflow (demonstrated in all papers).
 8.  Reflect effectively on your own learning and professional development (demonstrated in some tutorials and quizzes).
-
 
 ### Textbook
 
@@ -69,7 +68,7 @@ Before class starts you should go through Chapter 1 "[Telling stories with data]
 ### Week 3
 
 -   [Static communication](https://tellingstorieswithdata.com/05-static_communication.html)
-
+-   Guest: TBD
 
 ### Week 4
 
@@ -125,45 +124,43 @@ Before class starts you should go through Chapter 1 "[Telling stories with data]
 
 ### Summary
 
-+---------------------------+------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Item                      | Weight (%) | Due date                               | Notes                                                                                                                                                                                                                                                                                                      |
-+===========================+===========:+=======================================:+===========================================================================================================================================================================================================================================================================================================:+
-| Quiz                      | 7          | Thursdays, noon, Weeks 1-12            | Only best seven out of twelve count.                                                                                                                                                                                                                                                                       |
-+---------------------------+------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| SQL quiz                  | 1          | Thursday, noon, Week 11                | You cannot pass the course if you do not get at least 70 per cent in this quiz.                                                                                                                                                                                                                            |
-+---------------------------+------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Personal website          | 2          | Thursday, noon, Week 11                | You cannot pass the course if you do not get at least 70 per cent on this assessment.                                                                                                                                                                                                                      |
-|                           |            |                                        |                                                                                                                                                                                                                                                                                                            |
-|                           |            |                                        | Create a personal website using Quarto and make it live via GitHub Pages. At a minimum, it must include a bio and a CV in PDF form.                                                                                                                                                                        |
-+---------------------------+------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Tutorials                 | 6          | Thursday, noon, Weeks 1-12             | Only best three out of twelve count.                                                                                                                                                                                                                                                                       |
-+---------------------------+------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Term papers               | 48         | Thursdays, noon, Weeks 3, 6, 9         | You must submit Term Paper I in order to pass the course.                                                                                                                                                                                                                                                  |
-|                           |            |                                        |                                                                                                                                                                                                                                                                                                            |
-|                           |            | Term Paper I: 25 January 2024          | Only best two of three term papers count.                                                                                                                                                                                                                                                                  |
-|                           |            |                                        |                                                                                                                                                                                                                                                                                                            |
-|                           |            | Term Paper II: 15 February 2024        | Marking starts, noon, on the following Monday, and you can update until then i.e. submissions made by noon, Thursday, Week 3 can be updated until noon, Monday, Week 4 (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts.                    |
-|                           |            |                                        |                                                                                                                                                                                                                                                                                                            |
-|                           |            | Term Paper III: 14 March 2024          | Term Paper I: [Donaldson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-one)                                                                                                                                                                                                       |
-|                           |            |                                        |                                                                                                                                                                                                                                                                                                            |
-|                           |            |                                        | Term Paper II: [Mawson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-two).                                                                                                                                                                                                        |
-|                           |            |                                        |                                                                                                                                                                                                                                                                                                            |
-|                           |            |                                        | Term paper III: Pick one of [Murrumbidgee Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-three), [Spadina Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-four), or [Spofforth Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-five) |
-+---------------------------+------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Term papers (peer review) | 4          | Fridays, noon, Weeks 6, 9              | Conduct peer review for four other term papers, by creating a GitHub Issue or Pull Request. Papers will be distributed by a spreadsheet---add a link to the Issue/PR to a term paper that does not have four other entries.                                                                                |
-+---------------------------+------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Final paper               | 28         | Thursday, noon, Week 12 (4 April 2024) | You must submit this paper.                                                                                                                                                                                                                                                                                |
-|                           |            |                                        |                                                                                                                                                                                                                                                                                                            |
-|                           |            |                                        | Marking starts, noon, Monday 22 April and you can update update until then i.e. submissions made by noon, Thursday, Week 12 can be updated until noon, Monday, 22 April (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts.                   |
-|                           |            |                                        |                                                                                                                                                                                                                                                                                                            |
-|                           |            |                                        | [Final paper](https://tellingstorieswithdata.com/23-assessment.html#sec-final-paper).                                                                                                                                                                                                                      |
-+---------------------------+------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Final paper (peer review) | 4          | Friday, noon, Week 12 (5 April 2024)   | Conduct peer review for four other final papers, by creating a GitHub Issue or Pull Request. Papers will be distributed by a spreadsheet---add a link to the Issue/PR to a paper that does not have four other entries.                                                                                    |
-+---------------------------+------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
++------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Item                                     | Weight (%) | Due date                              | Notes                                                                                                                                                                                                                                                                                                   |
++==========================================+===========:+======================================:+========================================================================================================================================================================================================================================================================================================:+
+| Quiz                                     | 7          | Tuesdays, noon, Weeks 1-12            | Only best seven out of twelve count.                                                                                                                                                                                                                                                                    |
++------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| SQL quiz                                 | 1          | Tuesday, noon, Week 6                 | You cannot pass the course if you do not get at least 70 per cent in this quiz.                                                                                                                                                                                                                         |
++------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Personal website                         | 1          | Tuesday, noon, Week 9                 | You cannot pass the course if you do not get at least 70 per cent on this assessment.                                                                                                                                                                                                                   |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
+|                                          |            |                                       | Create a personal website using Quarto and make it live via GitHub Pages. At a minimum, it must include a bio and a CV in PDF form.                                                                                                                                                                     |
++------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Tutorials                                | 6          | Tuesdays, noon, Weeks 1-12            | Only best three out of twelve count.                                                                                                                                                                                                                                                                    |
++------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Term papers                              | 48         | Tuesdays, noon, Weeks 3, 6, 9         | You must submit Term Paper I in order to pass the course.                                                                                                                                                                                                                                               |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
+|                                          |            | Term Paper I: 23 January 2024         | Only best two of three term papers count.                                                                                                                                                                                                                                                               |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
+|                                          |            | Term Paper II: 13 February 2024       | Marking starts, noon, on the Thursday after submission, and you can update until then i.e. submissions made by noon, Tuesday, Week 3 can be updated until noon, Thursday, Week 3 (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts.       |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
+|                                          |            | Term Paper III: 13 March 2024         | Term Paper I: [Donaldson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-one)                                                                                                                                                                                                    |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
+|                                          |            |                                       | Term Paper II: [Mawson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-two).                                                                                                                                                                                                     |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
+|                                          |            |                                       | Term paper III: Pick one of [Murrumbidgee Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-three), [Spadina Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-spadina), or [Spofforth Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-five) |
++------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Conduct peer review of Term/Final papers | 3          | Wednesdays, noon, Weeks 3, 6, 9, 12   | Conduct peer review for six other term/final papers, by creating a GitHub Issue or Pull Request. Papers will be distributed by a spreadsheet---add a link to the Issue/PR to a term paper that does not have four other entries. You will only have 24 hours to do this.                                |
++------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Final paper                              | 34         | Tuesday, noon, Week 12 (3 April 2024) | You must submit this paper.                                                                                                                                                                                                                                                                             |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
+|                                          |            |                                       | Marking starts, noon, Friday 19 April and you can update update until then i.e. submissions made by noon, Tuesday, Week 12 can be updated until noon, Friday, 19 April (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts.                 |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
+|                                          |            |                                       | [Final paper](https://tellingstorieswithdata.com/23-assessment.html#sec-final-paper).                                                                                                                                                                                                                   |
++------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
 **You must submit Term Paper 1. You must submit the Final Paper. You must submit and get at least 70 per cent on both the SQL quiz and the Personal website.**
 
-Beyond that, you have scope to pick an assessment schedule that works for you. I will take your best three of the twelve tutorials for that six per cent, and your best seven of twelve quizzes for that seven per cent. I take your two best papers from the three term papers for that 48 per cent (24 per cent for each). You get four marks for peer review of term papers, (one per cent per review). There is 28 per cent allocated for the Final paper. And four per cent for peer review of the Final paper.
+Beyond that, you have scope to pick an assessment schedule that works for you. I will take your best three of the twelve tutorials for that six per cent, and your best seven of twelve quizzes for that seven per cent. I take your two best papers from the three term papers for that 48 per cent (24 per cent for each). You get up to three percentage points for conducting peer review of other student papers, (half a percentage point per review). There is 34 per cent allocated for the Final Paper.
 
 Additional details:
 
@@ -178,7 +175,7 @@ Additional details:
     -   0.80 - Interesting paper that is well-structured, coherent, and credible.
     -   1 - As with 0.80, but exceptional in some way.
 -   Only the best two of three term papers counts. This means each is worth 24 per cent.
--   Peer review will occur for Term Paper I, but it is a just an optional 'practise'\--students are typically not yet familiar enough with the expectations of the course so as to be able to provide valuable comments (other than noticing whether R has been cited!).
+-   Peer review will occur for Term Paper I, but it is a just an optional 'practise'--students are typically not yet familiar enough with the expectations of the course so as to be able to provide valuable comments (other than noticing whether R has been cited!).
 
 ## Other
 
@@ -203,7 +200,7 @@ So for those, if you have a situation, then just do not submit (or in the case o
 Slightly more involved:
 
 -   Term Paper I: You must submit something for Term Paper I, even if it gets zero. If you have a medical emergency that makes it impossible for you to submit even a blank page for Term Paper I, then please email me. In that situation one of the remaining term papers must be done individually to ensure fairness with the rest of the class.
--   Peer review: No accommodation or late submission is possible for this because it would hold up the rest of the class. That said, there are two opportunities to get the peer review marks for the term papers i.e. Term Paper II and Term Paper III, so if you cannot do any for Term Paper II, then just do four for Term Paper III. If you have a medical emergency that makes this impossible, then please email me and cc your faculty/department/college advisor so that we can work out an alternative plan.
+-   Peer review: No accommodation or late submission is possible for this because it would hold up the rest of the class. That said, there are many opportunities to get the peer review marks, so if you cannot do any for a particular paper, then just do the others. If you have a medical emergency that makes this impossible, then please email me and cc your faculty/department/college advisor so that we can work out an alternative plan.
 -   Final paper: The final paper is a critical piece of assessment. It is also up against deadlines for submission of grades (especially for graduating students). If you have a medical emergency that makes it impossible for you to submit before marking begins, then I **may** be able to grant you an extension of up to three days. Email me and cc your faculty/department/college advisor so that we can work out a alternative plan.
 
 ### Re-grading
@@ -240,12 +237,15 @@ Papers and reports should be well-written, well-organized, and easy to follow. T
 
 If you are going to not be able to submit at least two term papers, and/or be unable to submit the final paper then it would be unfair on the other students to allow you to pass the course. But it is not a situation that I want to get into. Please ensure you and your college registrar or faculty/department advisor get in touch with me as early as possible if this may be the case for you so that we can work out a solution.
 
+### Letters of recommendation
 
-### Use of Generative AI in assignments 
+I am happy to write letters for students who get both an A+ overall and an A+ in the final paper. This allows me to write a strong letter. If you are in this position after the class ends and want me to write a letter, please send me a request early.
 
-In general, students are encouraged to use generative AI tools as a starting point. Specific course policies are: 
+### Use of Generative AI in assignments
 
-- Code: Students may wish to use generative AI tools to aid in initial development and writing of code to answer assignment questions and carry out the research project analysis. If this is the case, the use of such tools should be explicitly acknowledged in the submitted work, and the relevant prompts and responses should be included in a text file in the repo. All code, regardless of how it is generated must be thoroughly commented and explained. Failure to do so may result in penalties. 
-- Written work: Using generative AI tools to generate written answers to assignment questions of text contained in the final research project is prohibited in this course. Representing as one's own an idea, or expression of an idea, that was AI-generated may be considered an academic offense in this course. However, you are welcome to use it to generate a first draft, which you then completely edit. Again, if you use such tools, it should be explicitly acknowledged in the submitted work, and the relevant prompts and responses should be included in a text file in the repo.  
+In general, students are encouraged to use generative AI tools as a starting point. Specific course policies are:
+
+-   Code: Students may wish to use generative AI tools to aid in initial development and writing of code to answer assignment questions and carry out the research project analysis. If this is the case, the use of such tools should be explicitly acknowledged in the submitted work, and the relevant prompts and responses should be included in a text file in the repo. All code, regardless of how it is generated must be thoroughly commented and explained. Failure to do so may result in penalties.
+-   Written work: Using generative AI tools to generate written answers to assignment questions of text contained in the final research project is prohibited in this course. Representing as one's own an idea, or expression of an idea, that was AI-generated may be considered an academic offense in this course. However, you are welcome to use it to generate a first draft, which you then completely edit. Again, if you use such tools, it should be explicitly acknowledged in the submitted work, and the relevant prompts and responses should be included in a text file in the repo.
 
 This course policy is designed to promote your learning and intellectual development and to help you reach course learning outcomes.
